--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,8 @@ env:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
   DOTNET_CLI_TELEMETRY_OPTOUT: true
   NUGET_XMLDOC_MODE: skip
-  WIX_REF: v6.0.0
+  WIX_REPO: xcp-ng/wix
+  WIX_REF: v6.0.0-xcpng.0
 
 jobs:
   build:
@@ -20,52 +21,45 @@ jobs:
       WixOfficialBuild: ${{ github.repository_owner == 'wixtoolset' && startsWith(github.ref, 'refs/tags/v') }}
     permissions:
       packages: write
-      id-token: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          repository: wixtoolset/wix
+          repository: ${{ env.WIX_REPO }}
           ref: ${{ env.WIX_REF }}
-          fetch-depth: 0
-
       - name: Build wix
         shell: cmd
         run: ./src/build_official.cmd
         env:
           RuntimeTestsEnabled: false
-          SigningKeyVaultUri:  ${{ env.SignBuild == 'true' && secrets.WIX_SIGNING_VAULTURI || '' }}
-          SigningTenantId:  ${{ env.SignBuild == 'true' && secrets.WIX_SIGNING_TENANTID || '' }}
-          SigningClientId:  ${{ env.SignBuild == 'true' && secrets.WIX_SIGNING_CLIENTID || '' }}
-          SigningClientSecret:  ${{ env.SignBuild == 'true' && secrets.WIX_SIGNING_SECRET || '' }}
-          SigningCertName:  ${{ env.SignBuild == 'true' && secrets.WIX_SIGNING_CERTNAME || '' }}
-
+          SigningKeyVaultUri: ${{ env.SignBuild == 'true' && secrets.WIX_SIGNING_VAULTURI || '' }}
+          SigningTenantId: ${{ env.SignBuild == 'true' && secrets.WIX_SIGNING_TENANTID || '' }}
+          SigningClientId: ${{ env.SignBuild == 'true' && secrets.WIX_SIGNING_CLIENTID || '' }}
+          SigningClientSecret: ${{ env.SignBuild == 'true' && secrets.WIX_SIGNING_SECRET || '' }}
+          SigningCertName: ${{ env.SignBuild == 'true' && secrets.WIX_SIGNING_CERTNAME || '' }}
       - name: Save build
         id: upload
         uses: actions/upload-artifact@v4
         with:
           name: artifacts
           path: build/artifacts/
-
       - name: Push to GitHub Packages
         run: dotnet nuget push "build/artifacts/**/*.nupkg" --source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json --api-key ${{ secrets.GITHUB_TOKEN }} --skip-duplicate
-
-    outputs:
-      subject-name: artifacts
-      subject-digest: sha256:${{steps.upload.outputs.artifact-digest}}
 
   attest:
     runs-on: ubuntu-latest
     needs: build
-
     permissions:
       id-token: write
       contents: read
       attestations: write
-
     steps:
-    - name: Generate artifact attestation
-      uses: actions/attest-build-provenance@v2
-      with:
-        subject-name: ${{needs.build.outputs.subject-name}}
-        subject-digest: ${{needs.build.outputs.subject-digest}}
+      - name: Download packages
+        uses: actions/download-artifact@v4
+        with:
+          name: artifacts
+          path: build/artifacts/
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v2
+        with:
+          subject-path: build/artifacts/**/*.nupkg
